# xilinx_ps_config

./: .gitignore  pyproject.toml
xilinx_fsbl_gen/: zynq_config.py  zynq_fsbl.py
xilinx_fsbl_gen/data/: zc702_preset.yml
xilinx_ps_config/: utils.py  zynq_config.py  zynq_fsbl.py
xilinx_ps_config/data/zynq_fsbl/: bspconfig.h  inbyte.c  outbyte.c  ps7_init.c  ps7_init.h
xilinx_ps_config/data/zynq_presets/: zc702.toml
